--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!--NAVBAR END-->
     <!--WARNING START-->
     <section class="warning" id="warning">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row align-items-start text-center">
-          <div class="col-12">
+          <div class="col-sm-12">
             <h1 class="display-6">This website is best viewed on a laptop/desktop. I'm currently working on making my website fully responsive on smaller devices, so you might encounter some issues viewing the wesbite content on your current device. Sorry for the inconvenience.</h1>
           </div>
         </div>
@@ -48,7 +48,7 @@
     <section id="home" class="intro-section">
         <div class="container">
             <div class="row align-items-start">
-                <div class='col-md-6'>
+                <div class='col-md-6 col-sm-12'>
                     <h1 class="display-2">
                         <span class="display-2--intro">Namaste! I'm Sreekethav Vaka</span>
                         <span class="display-2--description lh-base"> Welcome to my website, feel free to look around.</span>
@@ -70,7 +70,7 @@
                     </button>
                     <div id="balls1"></div>
                 </div>
-                <div class='col-md-6'>
+                <div class='col-md-6 col-sm-12'>
                     <img class='img-fluid myimg' src="Images\round pp photo.png" alt="headshot" height="400px" width="400px">
                 </div>
             </div>
@@ -82,14 +82,14 @@
     <section id="aboutandskills" class="aboutandskills">
         <div class="container">
             <div class="row align-items-start">
-                <div class='col-md-6'>
+                <div class='col-md-6 col-sm-12'>
                     <h1 class="display-2">
                         <span class="display-2--aboutandskillsheading">About</span>
                         <span class="display-2--aboutandskillsdescription lh-base">Hey there! I am a computer science student at Nanyang Technological University. I'm currently passionate about UI/UX design and want to learn the skills and tools necessary to become a full stack web developer. I like working out and reading fantasy novels in my free time.</span>
                         <div id="balls2"></div>
                     </h1>
                 </div>
-                <div class='col-md-3'>
+                <div class='col-md-3 col-sm-12'>
                     <h1 class="display-2">
                       <span class="display-2--aboutandskillsheading">Skills</span>
                     </h1>
@@ -103,7 +103,7 @@
                         <i class="fa-brands fa-sass fa-3x" style="color: #000000;"></i>
                     </span>
                 </div>
-                <div class='col-md-3'>
+                <div class='col-md-3 col-sm-12'>
                   <h1 class="display-2">
                     <span class="display-2--aboutandskillsheading">Tools</span>
                   </h1>
@@ -155,19 +155,23 @@
           </h1>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-md-4 col-sm-12 gradient shadow p-4">
-          <h1 class="display-4">
-            <span class="display-4--contactheading2">Get in touch with me</span>
-            <span class="display-4--contactdescription">Need a website? I may be able to help. I'm looking for opportunities to diversify my portfolio and any help is much appreciated! Although I'm still a learner, I'm certain that I can deliver top-notch work.</span>
-          </h1>
-        </div>
-        <div class="col-md-4 col-sm-12 bg-white shadow p-4">
-          <h1 class="display-4">
-            <span class="display-4--contactheading2">I'm available here</span>
-            <span class="display-4--contactdescription"><i class="fa-solid fa-envelope" style="color: #000000;"></i> vaka.sreekethav@gmail.com</span>
-            <span class="display-4--contactdescription"><i class="fa-brands fa-linkedin" style="color: #000000;"></i> @sreekethavvaka</span>
-          </h1>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-4 col-sm-12 gradient shadow p-4 overflow-auto">
+            <h1 class="display-4">
+              <span class="display-4--contactheading2">Get in touch with me</span>
+              <span class="display-4--contactdescription">Need a website? I may be able to help. I'm looking for opportunities to diversify my portfolio and any help is much appreciated! Although I'm still a learner, I'm certain that I can deliver top-notch work.</span>
+            </h1>
+          </div>
+          <div class="col-md-4 col-sm-12 bg-white shadow p-4 overflow-auto">
+            <h1 class="display-4">
+              <span class="display-4--contactheading2">I'm available here</span>
+              <span class="display-4--contactdescription"><i class="fa-solid fa-envelope" style="color: #000000;"></i></span>
+              <span class="display-4--contactdescription">vaka.sreekethav@gmail.com</span>
+              <span class="display-4--contactdescription"><i class="fa-brands fa-linkedin" style="color: #000000;"></i> </span>
+              <span class="display-4--contactdescription">@sreekethavvaka</span>
+            </h1>
+          </div>
         </div>
       </div>
     </section>
@@ -175,7 +179,7 @@
     <!--FOOTER START-->
     <section class="footer" id="footer">
       <div class="container">
-        <div class="row align-items-center text-center">
+        <div class="row g-0 align-items-center text-center">
           <div class="column">
             <p class="footer">
               <span class="display-5--footerdescription"><i class="fa-solid fa-copyright fa-xs" style="color: #000000;"></i> Copyright 2023 | Created by Sreekethav Vaka</span>
