--- a/index.html
+++ b/index.html
@@ -53,21 +53,9 @@
                         <span class="display-2--intro">Namaste! I'm Sreekethav Vaka</span>
                         <span class="display-2--description lh-base"> Welcome to my website, feel free to look around.</span>
                     </h1>
-                    <button type="button" class="rounded-pill btn-rounded">
-                        <a href="https://github.com/mentallyunstablefish" target="_blank">
-                            <i class="fa-brands fa-github fa-2x fa-fw" style="color: #000000;"></i>
-                        </a>
-                    </button>
-                    <button type="button" class="rounded-pill btn-rounded">
-                        <a href="https://www.linkedin.com/in/sreekethavvaka/" target="_blank">
-                            <i class="fa-brands fa-linkedin fa-2x fa-fw" style="color: #000000;"></i>
-                        </a>
-                    </button>
-                    <button type="button" class="rounded-pill btn-rounded">
-                        <a href="https://dribbble.com/Sreekethav" target="_blank">
-                            <i class="fab fa-dribbble fa-2x fa-fw" style="color: #000000;"></i>
-                        </a>
-                    </button>
+                    <a href="https://github.com/mentallyunstablefish" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-github fa-2x fa-fw" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/sreekethavvaka/" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-linkedin fa-2x fa-fw" style="color: #000000;"></i></a>
+                    <a href="https://dribbble.com/Sreekethav" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fab fa-dribbble fa-2x fa-fw" style="color: #000000;"></i></a>
                     <div id="balls1"></div>
                 </div>
                 <div class='col-md-6 col-sm-12'>
