--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assests\css\style.css">
     <link rel="stylesheet" href="assests\css\fontawesome.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Images/sree.ico">
 </head>
 <body style="width: 100%; height: 100%; margin: 0px; padding: 0px; overflow-x: hidden;">
     <!--NAVBAR START-->
@@ -22,13 +23,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#balls1">About</a>
+                <a class="nav-link" href="#aboutlink">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#balls2">Portfolio</a>
+                <a class="nav-link" href="#portfoliolink">Portfolio</a>
               </li>
             </ul>
-            <a href="#balls3" type="button" class="rounded-pill btn-rounded">Contact</a>
+            <a href="#getstarted" type="button" class="rounded-pill btn-rounded">Contact</a>
           </div>
         </div>
     </nav>
@@ -54,14 +55,14 @@
                         <span class="display-2--description lh-base"> Welcome to my website, feel free to look around.</span>
                     </h1>
                     <a href="https://github.com/mentallyunstablefish" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-github fa-2x fa-fw" style="color: #000000;"></i></a>
-                    <a href="https://www.linkedin.com/in/sreekethavvaka/" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-linkedin fa-2x fa-fw" style="color: #000000;"></i></a>
+                    <a href="https://www.linkedin.com/in/sreekethavvaka" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-linkedin fa-2x fa-fw" style="color: #000000;"></i></a>
                     <a href="https://dribbble.com/Sreekethav" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fab fa-dribbble fa-2x fa-fw" style="color: #000000;"></i></a>
-                    <div id="balls1"></div>
                 </div>
                 <div class='col-md-6 col-sm-12'>
                     <img class='img-fluid myimg' src="Images\round pp photo.png" alt="headshot" height="400px" width="400px">
                 </div>
             </div>
+            <div id="aboutlink"></div>
         </div>
     </section>
     <!--INTRO END-->
@@ -74,7 +75,6 @@
                     <h1 class="display-2">
                         <span class="display-2--aboutandskillsheading">About</span>
                         <span class="display-2--aboutandskillsdescription lh-base">Hey there! I am a computer science student at Nanyang Technological University. I'm currently passionate about UI/UX design and want to learn the skills and tools necessary to become a full stack web developer. I like working out and reading fantasy novels in my free time.</span>
-                        <div id="balls2"></div>
                     </h1>
                 </div>
                 <div class='col-md-3 col-sm-12'>
@@ -100,6 +100,7 @@
                   </span>
               </div>
             </div>
+            <div id="portfoliolink"></div>
         </div>
     </section>
     <!--ABOUT&SKILLS END-->
@@ -130,7 +131,6 @@
           </div>
         </div>  
       </div>
-      <div id="balls3"></div>
     </section>
     <!--PORTFOLIO END-->
     <div class="heading-line"></div>
