--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     </h1>
                     <a href="https://github.com/mentallyunstablefish" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-github fa-2x fa-fw" style="color: #000000;"></i></a>
                     <a href="https://www.linkedin.com/in/sreekethavvaka" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fa-brands fa-linkedin fa-2x fa-fw" style="color: #000000;"></i></a>
-                    <a href="https://dribbble.com/Sreekethav" target="_blank" type="button" class="rounded-pill btn-rounded"><i class="fab fa-dribbble fa-2x fa-fw" style="color: #000000;"></i></a>
-                </div>
+                  </div>
                 <div class='col-md-6 col-sm-12'>
                     <img class='img-fluid myimg' src="Images\round pp photo.png" alt="headshot" height="400px" width="400px">
                 </div>
@@ -74,29 +73,32 @@
                 <div class='col-md-6 col-sm-12'>
                     <h1 class="display-2">
                         <span class="display-2--aboutandskillsheading">About</span>
-                        <span class="display-2--aboutandskillsdescription lh-base">Hey there! I am a computer science student at Nanyang Technological University. I'm currently passionate about UI/UX design and want to learn the skills and tools necessary to become a full stack web developer. I like working out and reading fantasy novels in my free time.</span>
+                        <span class="display-2--aboutandskillsdescription lh-base">Hey there! I am a computer science student at Nanyang Technological University. I like working out and reading fantasy novels in my free time.</span>
                     </h1>
                 </div>
                 <div class='col-md-3 col-sm-12'>
                     <h1 class="display-2">
                       <span class="display-2--aboutandskillsheading">Skills</span>
                     </h1>
-                    <span class="display-2--aboutandskillsdescription lh-base">
-                        <i class="fa-brands fa-python fa-3x" style="color: #000000;"></i>
-                        <i class="fa-brands fa-html5 fa-3x" style="color: #000000;"></i>
-                        <i class="fab fa-css3 fa-3x" style="color: #000000;"></i>
-                        <br>
-                        <p></p>
-                        <i class="fa-brands fa-bootstrap fa-3x" style="color: #000000;"></i>
-                        <i class="fa-brands fa-sass fa-3x" style="color: #000000;"></i>
+                    <span>
+                      <img src="Images\c-logo-black-and-white.png" style="width: 40px; height: 45px; vertical-align: middle;">
+                      <i class="fa-brands fa-python fa-3x" style="color: #000000;"></i>
+                      <i class="fa-brands fa-java fa-3x" style="color: #000000;"></i>
+                      <i class="fa-brands fa-js fa-3x" style="color: #000000;"></i>
+                      <i class="fa-brands fa-html5 fa-3x" style="color: #000000;"></i>
+                      <i class="fab fa-css3 fa-3x" style="color: #000000;"></i>
+                      <i class="fa-brands fa-bootstrap fa-3x" style="color: #000000;"></i>
+                      <i class="fa-brands fa-sass fa-3x" style="color: #000000;"></i>
                     </span>
                 </div>
                 <div class='col-md-3 col-sm-12'>
                   <h1 class="display-2">
                     <span class="display-2--aboutandskillsheading">Tools</span>
                   </h1>
-                  <span class="display-2--aboutandskillsdescription lh-base">
-                    <img src="Images\file_type_vscode.svg" alt="VS Code" width="70px" height="70px">
+                  <span>
+
+                    <i class="fa-brands fa-github fa-3x" style="color: #000000;"></i>
+                    <i class="fa-brands fa-git fa-3x" style="color: #000000;"></i>
                   </span>
               </div>
             </div>
@@ -111,7 +113,7 @@
         <div class="row align-items-start text-center">
           <div class="col-12">
             <h1 class="display-3">
-              <span class="display-3--portfolioheading">Portfolio</span>
+              <span class="display-3--portfolioheading">Projects</span>
               <span class="display-3--portfoliodescription lh-base">Take a gander at some of my work!</span>
             </h1>
           <div class="col-12">
@@ -148,7 +150,7 @@
           <div class="col-md-4 col-sm-12 gradient shadow p-4 overflow-auto">
             <h1 class="display-4">
               <span class="display-4--contactheading2">Get in touch with me</span>
-              <span class="display-4--contactdescription">Need a website? I may be able to help. I'm looking for opportunities to diversify my portfolio and any help is much appreciated! Although I'm still a learner, I'm certain that I can deliver top-notch work.</span>
+              <span class="display-4--contactdescription">Wanna collab?</span>
             </h1>
           </div>
           <div class="col-md-4 col-sm-12 bg-white shadow p-4 overflow-auto">
