--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class='col-md-6 col-sm-12'>
                     <h1 class="display-2">
                         <span class="display-2--aboutandskillsheading">About</span>
-                        <span class="display-2--aboutandskillsdescription lh-base">Hey there! I am a computer science student at Nanyang Technological University. I like working out and reading fantasy novels in my free time.</span>
+                        <span class="display-2--aboutandskillsdescription lh-base">I'm a year 2 computer science student at Nanyang Technological University. I'm passionate about systems, hardware, and cybersecurity.</span>
                     </h1>
                 </div>
                 <div class='col-md-3 col-sm-12'>
@@ -81,14 +81,16 @@
                       <span class="display-2--aboutandskillsheading">Skills</span>
                     </h1>
                     <span>
-                      <img src="Images\c-logo-black-and-white.png" style="width: 40px; height: 45px; vertical-align: middle;">
+                      <img src="Images\output-onlinepngtools.png" style="width: 48px; height: 48px; vertical-align: bottom;">
+                      <img src="Images\c-logo-black-and-white.png" style="width: 40px; height: 45px; vertical-align: bottom;">
                       <i class="fa-brands fa-python fa-3x" style="color: #000000;"></i>
                       <i class="fa-brands fa-java fa-3x" style="color: #000000;"></i>
                       <i class="fa-brands fa-js fa-3x" style="color: #000000;"></i>
                       <i class="fa-brands fa-html5 fa-3x" style="color: #000000;"></i>
                       <i class="fab fa-css3 fa-3x" style="color: #000000;"></i>
-                      <i class="fa-brands fa-bootstrap fa-3x" style="color: #000000;"></i>
-                      <i class="fa-brands fa-sass fa-3x" style="color: #000000;"></i>
+                      <img src="Images\images-removebg-preview.png" style="width: 50px; height: 50px; vertical-align: bottom;">
+                      <img src="Images\bash.png" style="width: 50px; height: 50px; vertical-align: bottom;">
+
                     </span>
                 </div>
                 <div class='col-md-3 col-sm-12'>
@@ -96,8 +98,11 @@
                     <span class="display-2--aboutandskillsheading">Tools</span>
                   </h1>
                   <span>
-
-                    <i class="fa-brands fa-github fa-3x" style="color: #000000;"></i>
+                    <img src="Images\97_Docker_logo_logos-512.png" style="width: 50px; height: 50px; vertical-align: bottom;">
+                    <img src="Images\vmware-logo-black.png" style="width: 75px; height: 55px; vertical-align: bottom;">
+                    <img src="Images\vultr-logo-png_seeklogo-297275.png" style="width: 75px; height: 55px; vertical-align: bottom;">
+                    <img src="Images\nmap-logo-256x256.png" style="width: 50px; height: 50px; vertical-align: bottom;">
+                    <img src="Images\wireshark.png" style="width: 90px; height: 50px; vertical-align: bottom;">
                     <i class="fa-brands fa-git fa-3x" style="color: #000000;"></i>
                   </span>
               </div>
@@ -107,34 +112,161 @@
     </section>
     <!--ABOUT&SKILLS END-->
     <div class="heading-line"></div>
-    <!--PORTFOLIO START-->
-    <section id="portfolio" class="portfolio">
-      <div class="container">
-        <div class="row align-items-start text-center">
-          <div class="col-12">
-            <h1 class="display-3">
-              <span class="display-3--portfolioheading">Projects</span>
-              <span class="display-3--portfoliodescription lh-base">Take a gander at some of my work!</span>
-            </h1>
-          <div class="col-12">
-        </div>
-        <div class="row align-items-center text-center">
-          <div class="col-lg-12 col-md-12">
-            <div class="portfolio-box shadow">
-              <img src="Images\5147397.jpg" alt="Under Construction" title="Under Construction" class="img-fluid">
-              <div class="portfolio-info">
-                <div class="caption">
-                  <h4>Under Construction</h4>
-                  <p>Come back later!</p>
-                  <a href="http://www.freepik.com">Designed by Freepik</a>
-                </div>
-              </div>
+<!--PORTFOLIO START-->
+<section id="portfolio" class="portfolio">
+  <div class="container">
+    <div class="row align-items-start text-center">
+      <div class="col-12">
+        <h1 class="display-3">
+          <span class="display-3--portfolioheading">Projects</span>
+          <span class="display-3--portfoliodescription lh-base">Take a gander at some of my work!</span>
+        </h1>
+      </div>
+      <div class="col-12">
+        <!-- Slider Container -->
+        <div class="slider">
+          <div class="slider-track">
+            <!-- Slide 1 -->
+            <div class="slide">
+              <a href="https://github.com/mentallyunstablefish/my-OS" target="_blank">
+                <img src="Images/myOS photo.png" alt="MyOS">
+                <h3>MyOS</h3>
+                <p>MyOS is an operating system written in x86 assembly and C. It is designed for BIOS systems running on x86 processors. Currently, MyOS consists of the code for the bootloader and MyOS’s main operating system kernel.</p>
+              </a>
+            </div>
+            <!-- Slide 2 -->
+            <div class="slide">
+              <a href="https://github.com/mentallyunstablefish/port-scanner" target="_blank">
+                <img src="Images/portscan.png" alt="Port Scanner">
+                <h3>Port Scanner</h3>
+                <p>This Python script is a simple port scanner that checks if specific ports are open or closed on a target host. It uses Python's built-in socket module to test connectivity and gives you a quick idea of which TCP ports are open.</p>
+              </a>
+            </div>
+            <!-- Slide 3 -->
+            <div class="slide">
+              <a href="https://github.com/mentallyunstablefish/web-block" target="_blank">
+                <img src="Images/webblock.png" alt="Website Blocker">
+                <h3>Website Blocker</h3>
+                <p>Website Blocking/Unblocking Tool</p>
+              </a>
+            </div>
+            <div class="slide">
+              <a href="https://github.com/mentallyunstablefish/boxoffice-revenue-prediction" target="_blank">
+                <img src="Images/borev.png" alt="Box Office Revenue Prediction Model">
+                <h3>Box Office Revenue Prediction Model</h3>
+                <p>This project aims to predict box office revenue using data analysis and machine learning within the entertainment industry. </p>
+              </a>
             </div>
           </div>
-        </div>  
+          <!-- Navigation Arrows -->
+          <button class="slider-prev">&#10094;</button>
+          <button class="slider-next">&#10095;</button>
+        </div>
       </div>
-    </section>
-    <!--PORTFOLIO END-->
+    </div>
+  </div>
+</section>
+<!--PORTFOLIO END-->
+
+<style>
+  .slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .slider-track {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .slide {
+    min-width: 100%;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .slide img {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 10px;
+  }
+
+  .slide h3 {
+    margin-top: 10px;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .slide p {
+    font-size: 1rem;
+    color: #555;
+    text-decoration: none; /* Ensure the description isn't underlined */
+  }
+
+  a {
+    text-decoration: none; /* Remove underline from links */
+  }
+
+  a:hover {
+    text-decoration: none; /* Prevent underlining everything on hover */
+  }
+
+  a:hover h3 {
+    text-decoration: underline; /* Add underline only to the title on hover */
+  }
+
+  a:hover p {
+    text-decoration: none; /* Ensure descriptions are not underlined or affected */
+  }
+
+  .slider-prev,
+  .slider-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .slider-prev {
+    left: 10px;
+  }
+
+  .slider-next {
+    right: 10px;
+  }
+</style>
+
+<script>
+  const track = document.querySelector('.slider-track');
+  const slides = document.querySelectorAll('.slide');
+  const prevButton = document.querySelector('.slider-prev');
+  const nextButton = document.querySelector('.slider-next');
+  let currentIndex = 0;
+
+  function updateSlider() {
+    track.style.transform = `translateX(-${currentIndex * 100}%)`;
+  }
+
+  prevButton.addEventListener('click', () => {
+    currentIndex = (currentIndex > 0) ? currentIndex - 1 : slides.length - 1;
+    updateSlider();
+  });
+
+  nextButton.addEventListener('click', () => {
+    currentIndex = (currentIndex < slides.length - 1) ? currentIndex + 1 : 0;
+    updateSlider();
+  });
+</script>
+
+<!--PORTFOLIO END-->
     <div class="heading-line"></div>
     <!--GETSTARTED START-->
     <section class="getstarted" id="getstarted">
@@ -172,7 +304,7 @@
         <div class="row g-0 align-items-center text-center">
           <div class="column">
             <p class="footer">
-              <span class="display-5--footerdescription"><i class="fa-solid fa-copyright fa-xs" style="color: #000000;"></i> Copyright 2023 | Created by Sreekethav Vaka</span>
+              <span class="display-5--footerdescription"><i class="fa-solid fa-copyright fa-xs" style="color: #000000;"></i> Copyright 2025 | Created by Sreekethav Vaka</span>
             </p>
           </div>
         </div>
